CSS and UI Bug fixed
- Background Image now resize keeping aspect ratio.
- Profile Image button now is capable of restoring original pac logo/changing the current image. 
- purging code (removing std::cout debbugers)
- BugFixed: sendcoinsentry address typography was different, now it takes the selected font for the wallet.
- BugFixed: receive coins page, the form was being cropped on small screens, changed the layouts and min height.
-

--- a/src/qt/res/css/pac.css
+++ b/src/qt/res/css/pac.css
@@ -42,9 +42,8 @@ QLabel, QGroupBox::title{
     font-weight:normal;
 }
 /* General window */
-QMainWindow{
-    border-image: url(:/images/pac/drkblue_walletFrame_bg) 0 0 0 0 stretch stretch;
-}
+/*QMainWindow{
+}*/
 /* Global message box */
 QMessageBox {
     background-color:rgb(26,26,26);
@@ -556,20 +555,18 @@ BitcoinAmountField QComboBox::indicator {
     height:80px;
     width:80px;
     border-radius: 40px;
-    /*border-image: url(:/images/pac/hover_profile) 0 0 0 0 stretch stretch;*/
 }
 #btnChangeImage:hover {
     height:80px;
     width:80px;
     border-radius: 40px;
     border: 1px solid rgb(255,255,255) !important;
-    /*border-image: url(:/images/pac/hover_profile) 0 0 0 0 stretch stretch;*/
 }
 #btnChangeImage:pressed {
     height:80px;
     width:80px;
     border-radius: 40px;
-    background: red !important;
+    background: white !important;
 }
 
 /*
@@ -582,22 +579,7 @@ BitcoinAmountField QComboBox::indicator {
 /*
  * SendCoins Page
 */
- QSlider::groove:vertical {
-     background: red;
-     position: absolute; /* absolutely position 4px from the left and right of the widget. setting margins on the widget should work too... */
-     left: 4px; right: 4px;
- }
- QSlider::handle:vertical {
-     height: 10px;
-     background: green;
-     margin: 0 -4px; /* expand outside the groove */
- }
- QSlider::add-page:vertical {
-     background: white;
- }
- QSlider::sub-page:vertical {
-     background: pink;
- }
+
 #SendCoinsDialog{
     background:transparent;
 }
